# s2n-quic

./: BUG_REPRODUCTION.md  Cargo.toml  README.md  _typos.toml  callgrind.out  callgrind.out.1  callgrind.out.10  callgrind.out.100  callgrind.out.101  callgrind.out.102  callgrind.out.103  callgrind.out.104  callgrind.out.105  callgrind.out.106  callgrind.out.107  callgrind.out.108  callgrind.out.109  callgrind.out.11  callgrind.out.110  callgrind.out.111  callgrind.out.112  callgrind.out.113  callgrind.out.114  callgrind.out.115  callgrind.out.116  callgrind.out.117  callgrind.out.118  callgrind.out.119  callgrind.out.12  callgrind.out.120  callgrind.out.121  callgrind.out.122  callgrind.out.123  callgrind.out.124  callgrind.out.125  callgrind.out.126  callgrind.out.127  callgrind.out.128  callgrind.out.129  callgrind.out.13  (+398 more)
.cargo/: config.toml
.github/workflows/: ci-autofix.yml  ci.yml  copilot-setup-steps.yml
dc/ofi-libfabric-sys-polyfill/: Cargo.toml  README.md
dc/ofi-libfabric-sys-polyfill/src/: lib.rs
dc/queries/compare/: errors.sql  latency.sql  queue_health.sql  summary.sql  throughput.sql
dc/queries/dashboard/: congestion_ts.sql  errors_top.sql  overview.sql  throughput_ts.sql
dc/queries/views/: errors.sql  inflight.sql  pto.sql  queue_depths.sql  rtt.sql  task_polls.sql  throughput.sql
dc/s2n-quic-dc/: ARCHITECTURE.md  Cargo.toml  DESIGN.md  DIAGRAMS.md  INVESTIGATION_SUMMARY.md  LIBFABRIC_POLYFILL.md  PROVIDER_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  STATUS.md  TEST_COVERAGE_PLAN.md  UDP_TEST_README.md  V2.md  WHEEL_BUSY_POLL_TESTING.md  WORK_ITEM_STATUS.md  log.txt  transport-refactor-design-review.md  udp-improvements.md
dc/s2n-quic-dc-benches/: Cargo.toml
dc/s2n-quic-dc-benches/benches/: bench.rs  iai.rs
dc/s2n-quic-dc-benches/src/: bench.rs  endpoint.rs  lib.rs  send_wheel.rs
dc/s2n-quic-dc-cli/: Cargo.toml  INVENTORY.md  README.md  example-config.toml
dc/s2n-quic-dc-cli/src/: client.rs  config.rs  endpoint.rs  main.rs  metrics.rs  protocol.rs  server.rs  shared_state.rs  tui.rs  tui_logger.rs
dc/s2n-quic-dc-metrics/: Cargo.toml
dc/s2n-quic-dc-metrics/src/: appender.rs  backend.rs  bool_counter.rs  callback.rs  counter.rs  format.rs  lib.rs  registry.rs  rseq.rs  summary.rs
dc/s2n-quic-dc-metrics/src/backend/: arrow.rs  otel.rs  prometheus.rs  querylog.rs  statsd.rs
dc/s2n-quic-dc/docs/: ack-processor-scalability.md  endpoint-flow-control.md  endpoint-frame-lifecycle.md  phase-2.1-gap-analysis.md  queue-dispatch-wiring.md  queue-init-protocol.md  queue-init-review-findings.md  queue-init-review.md
dc/s2n-quic-dc/events/: acceptor.rs  common.rs  connection.rs  endpoint.rs
dc/s2n-quic-dc/examples/: frame_trace_dump.rs
dc/s2n-quic-dc/src/: acceptor.rs  allocator.rs  busy_poll.rs  bytevec.rs  causality.rs  client.rs  clock.rs  congestion.rs  continuation.rs  counter.rs  credentials.rs  credit.rs  data.rs  endpoint.rs  event.rs  flow.rs  fs.rs  intrusive.rs  intrusive_queue.rs  lib.rs  libfabric.rs  libfabric_polyfill.rs  libfabric_udp_provider.rs  message.rs  msg.rs  packet.rs  peer.rs  priority.rs  queue.rs  runtime.rs  sched.rs  server.rs  socket.rs  stream.rs  stream3.rs  sync.rs  testing.rs  tests.rs  time.rs  transport.rs  (+3 more)
dc/s2n-quic-dc/src/acceptor/: channel.rs
dc/s2n-quic-dc/src/busy_poll/: clock.rs  tests.rs
dc/s2n-quic-dc/src/byte_vec/: mod.rs  tests.rs
dc/s2n-quic-dc/src/bytevec/: builder.rs  tests.rs
dc/s2n-quic-dc/src/client/: bidirectional.rs  streaming_request.rs  streaming_response.rs  unary.rs
dc/s2n-quic-dc/src/clock/: bach.rs  macros.rs  precision.rs  testing.rs  tokio.rs  wheel.rs
dc/s2n-quic-dc/src/credit/: config.rs  counters.rs  handle.rs  pool.rs  slot.rs  tests.rs  tier.rs  waiter.rs  waker.rs
dc/s2n-quic-dc/src/datagram/: batch.rs
dc/s2n-quic-dc/src/endpoint/: ack.rs  assemble.rs  combinator.rs  counters.rs  dbg.rs  dispatch.rs  edt.rs  error.rs  frame.rs  frame_trace.rs  frame_trace.views.sql  incoming.rs  inflight.rs  msg.rs  outgoing.rs  range_codec.rs  recv.rs  send.rs  socket.rs  tasks.rs  testing.rs  tests.rs  ups.rs  waker.rs  worker.rs
dc/s2n-quic-dc/src/event/: diagnostic.rs  generated.rs
dc/s2n-quic-dc/src/flow/: handle.rs  queue.rs
dc/s2n-quic-dc/src/fs/: backend.rs  combinator.rs  config.rs  counters.rs  dbg.rs  device.rs  direct.rs  materialize.rs  op.rs  scheduler.rs  tests.rs  trace.rs  trace.views.sql
dc/s2n-quic-dc/src/libfabric/: macros.rs
dc/s2n-quic-dc/src/message/: libfabric.rs
dc/s2n-quic-dc/src/msg/: segment.rs  send.rs
dc/s2n-quic-dc/src/packet/: secret_control.rs  tag.rs
dc/s2n-quic-dc/src/psk/: client.rs  io.rs  server.rs
dc/s2n-quic-dc/src/queue/: client.rs  freed.rs  half.rs  handle.rs  msg_entry.rs  msg_table.rs  page_table.rs  server.rs  slot.rs  testing.rs
dc/s2n-quic-dc/src/runtime/: runner.rs  spawn.rs  task.rs  wakers.rs
dc/s2n-quic-dc/tests/: microsecond_timer_test.rs  packet_pacer_timer_test.rs
quic/s2n-quic-core/src/: buffer.rs  dc.rs
quic/s2n-quic-platform/: Cargo.toml
quic/s2n-quic-platform/src/: io.rs
scripts/: local_test
tools/dc-pipeline-visualizer/: Cargo.toml  README.md  graph.example.json
tools/dc-pipeline-visualizer/src/: graph.rs  main.rs  metrics.rs  protocol.rs  server.rs
tools/dc-pipeline-visualizer/ui/: index.html  package-lock.json  package.json
tools/dc-pipeline-visualizer/ui/src/: App.tsx  index.css
tools/dc-tester/: Cargo.toml
tools/dc-tester/etc/: config.29g.toml  config.example.toml
tools/dc-tester/src/: busy_poll.rs  client.rs  config.rs  endpoint.rs  main.rs  net_stats.rs  psk.rs  server.rs
tools/fs-tester/: Cargo.toml  README.md
tools/fs-tester/etc/: example.toml
tools/fs-tester/src/: config.rs  main.rs
tools/s2n-events/src/: output.rs  parser.rs
tools/topology-viewer/: package-lock.json  package.json  tsconfig.tsbuildinfo
tools/topology-viewer/src/: App.tsx  main.tsx
tools/wheel-demo/src/: pipeline.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: analyze.rs  cwlogs.rs  frame_trace.rs  investigate.rs  local.rs  metrics_parquet.rs  mod.rs
(+597 files in other folders)
