[package]
name = "s2n-quic-dc-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "Apache-2.0"

[[bin]]
name = "s2n-quic-dc-cli"
path = "src/main.rs"

[dependencies]
# s2n-quic dependencies
s2n-quic = { path = "../../quic/s2n-quic", features = ["provider-event-tracing"] }
s2n-quic-dc = { path = "../s2n-quic-dc" }
s2n-quic-core = { path = "../../quic/s2n-quic-core", features = ["testing"] }
s2n-codec = { path = "../../common/s2n-codec" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Utilities
anyhow = "1"
bytes = "1"
parking_lot = "0.12"

[dev-dependencies]
