[package]
name = "s2n-quic-dc-metrics"
version = "0.76.0"
description = "Crate used to generate metrics for s2n-quic-dc"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
autobenches = false

[features]
# Opt-in OTLP protobuf export backend. Off by default: `prost` is an additional dependency and
# most consumers only need the querylog/statsd backends. Enabling this pulls in `prost` and unlocks
# `backend::OtlpBackend`, which encodes metrics into `ExportMetricsServiceRequest` protobuf
# payloads that the caller transmits (HTTP, gRPC, etc.) via an `OtlpSink`.
otel = ["dep:prost"]

[dependencies]
# Protobuf encoding for the OTLP metrics backend (opt-in: `--features otel`).
# Only the runtime is needed — the derive macros ship in the same crate, so no separate
# `prost-build` or code-gen step is required. The hand-written proto structs live in
# `backend/otel.rs` and match the OTLP metrics wire format exactly.
prost = { version = "0.13", optional = true }
futures-util = "0.3.26"
serde_json = "1"
histogram = "0.11.3"
pin-project-lite = "0.2.9"
tokio = { version = "1.25.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "time"] }
chrono = { version = "0.4.39", default-features = false, features = ["std", "now"] }
libc = "0.2.170"
crossbeam-queue = "0.3.12"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tokio_unstable)']

[[bench]]
name = "bench"
path = "benches/main.rs"
harness = false

[dev-dependencies]
criterion = "0.8"
