[package]
name = "s2n-quic-dc-metrics"
version = "0.76.0"
description = "Crate used to generate metrics for s2n-quic-dc"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
autobenches = false

[features]
# Opt-in Arrow export backend. Off by default: `arrow` is a heavy dependency and most consumers
# only need the querylog/statsd backends. Enabling this pulls in `arrow` and unlocks
# `backend::ArrowBackend`, which accumulates records into an `arrow::RecordBatch` that the caller
# serializes to Parquet (owning the writer + file rotation itself).
arrow = ["dep:arrow"]

[dependencies]
# Kept at the same major version `xtask` uses so the produced schema/RecordBatch interoperate.
arrow = { version = "54", default-features = false, optional = true }
futures-util = "0.3.26"
serde_json = "1"
histogram = "0.11.3"
pin-project-lite = "0.2.9"
tokio = { version = "1.25.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "time"] }
chrono = { version = "0.4.39", default-features = false, features = ["std", "now"] }
libc = "0.2.170"
crossbeam-queue = "0.3.12"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tokio_unstable)']

[[bench]]
name = "bench"
path = "benches/main.rs"
harness = false

[dev-dependencies]
criterion = "0.8"
