[package]
name = "dc-tester"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]

[dependencies]
clap = { version = "4", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }
s2n-quic = { path = "../../quic/s2n-quic", features = ["unstable-provider-dc", "unstable-provider-random"] }
s2n-quic-dc = { path = "../../dc/s2n-quic-dc", features = ["tokio"] }
s2n-quic-core = { path = "../../quic/s2n-quic-core", features = ["testing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release-debug]
inherits = "dev"
opt-level = 3
