[package]
name = "dc-tester"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# Compiles in the s2n-quic-dc frame/packet flight recorder (its trace points are gated behind
# `queue-dbg`) and pulls in `backbeat` so `--frame-trace-interval` can arm capture and dump. Off by
# default — a normal load test records nothing and never builds the recorder.
frame-trace = ["s2n-quic-dc/queue-dbg", "dep:backbeat"]

[dependencies]
backbeat = { version = "0.1", optional = true }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["profiling", "stats"] }
tikv-jemalloc-sys = { version = "0.6", features = ["profiling"] }
s2n-quic = { path = "../../quic/s2n-quic", features = ["unstable-provider-dc", "unstable-provider-random"] }
s2n-quic-dc = { path = "../../dc/s2n-quic-dc", features = ["tokio"] }
s2n-quic-core = { path = "../../quic/s2n-quic-core", features = ["testing", "state-tracing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
dial9-tokio-telemetry = { version = "0.3", features = ["tracing-layer", "cpu-profiling"] }
dial9-perf-self-profile = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
