[package]
name = "fs-tester"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
bytes = "1"
s2n-quic-dc = { path = "../../dc/s2n-quic-dc", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
hdrhistogram = "7"
